feat: Primera Version Estable BACK